--- a/design/pages/templates/base.html
+++ b/design/pages/templates/base.html
@@ -4,8 +4,8 @@
   {% import 'templates/macros.html' as macros %}
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <link rel="stylesheet" type="text/css" href="prism.css">
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="/public/prism.css">
+  <link rel="stylesheet" type="text/css" href="/public/style.css">
   {% block header %}
   {% endblock %}
   <title></title>
