--- a/design/pages/templates/post.html
+++ b/design/pages/templates/post.html
@@ -1,7 +1,7 @@
 {% extends "templates/base.html" %}
 
 {% block content %}
-    <h1>{% block title %}Template Title{% endblock %}</h1>
+    <h1>{% block title %}{{post.title}}{% endblock %}</h1>
 
     {% block post %}
     {% endblock %}
