--- a/design/pages/templates/base.html
+++ b/design/pages/templates/base.html
@@ -6,9 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <link rel="stylesheet" type="text/css" href="/public/prism.css">
   <link rel="stylesheet" type="text/css" href="/public/style.css">
+  {% if DEBUG %}
+    <script type="text/javascript" src="http://livejs.com/live.js"></script>
+  {% endif %}
   {% block header %}
   {% endblock %}
-  <title></title>
+  <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
 
