--- a/design/pages/templates/base.html
+++ b/design/pages/templates/base.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <link rel="stylesheet" type="text/css" href="/public/prism.css">
+  <link rel="stylesheet" type="text/css" href="/public/pygments.css">
   <link rel="stylesheet" type="text/css" href="/public/style.css">
   {% if DEBUG %}
     <script type="text/javascript" src="http://livejs.com/live.js"></script>
