--- a/design/pages/templates/macros.html
+++ b/design/pages/templates/macros.html
@@ -1,3 +1,3 @@
-  {% macro code(prism, language) -%}
-    TODO: code highlighting
+  {% macro code(language) -%}
+      {{ highlight(language, caller()) }}
   {%- endmacro %}
