--- a/design/public/style.css
+++ b/design/public/style.css
@@ -222,9 +222,7 @@ footer .foot-box {
 }
 
 /* Code */
-
-pre.code {
-    color: white;
-    background-color: #333;
-    padding: 1em;
+.highlight {
+  padding: 0.6em;
+  background-color: #333;
 }
