Simplify rendering and add latest posts to home

--- a/design/templates/nav.html
+++ b/design/templates/nav.html
@@ -3,10 +3,8 @@
     <input type="checkbox" id="nav-toggle" class="nav-toggle">
     <nav>
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Home</a></li>
+            <li><a href="/">Home</a></li>
+            <li><a href="/posts">Posts</a></li>
         </ul>
     </nav>
     <label for="nav-toggle" class="nav-toggle-label">
