--- a/design/public/style.css
+++ b/design/public/style.css
@@ -222,9 +222,35 @@ footer .foot-box {
 }
 
 /* Code */
+
 .highlight {
   padding: 0.6em;
   background-color: #333;
   color: var(--white);
   overflow: auto;
+}
+
+/* Post rendering */
+
+.latest-posts {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.latest-posts a {
+  text-decoration: none;
+  color: black;
+  padding: 10px;
+  padding-left: 0;
+  width: 100%;
+  padding: 1em;
+  padding-left: 0;
+  transition: color 120ms ease-in-out;
+  display: flex;
+  justify-content: space-between;
+}
+
+.latest-posts a:hover {
+  color: var(--nav-text-hover);
 }
