--- a/design/public/style.css
+++ b/design/public/style.css
@@ -218,7 +218,7 @@ footer .foot-box {
     width: 100%;
     height: 100%;
     display: grid;
-    grid-template-columns: minmax(0, 1fr) minmax(400px, 3fr) minmax(0, 1fr);
+    grid-template-columns: minmax(0, 1fr) minmax(400px, 5fr) minmax(0, 1fr);
     /* Instead of justify-self: start */
     margin-bottom: auto;
 }
@@ -262,4 +262,45 @@ footer .foot-box {
 
 .latest-posts a:hover {
   color: var(--nav-text-hover);
+}
+
+.post-grid {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+}
+
+.post-grid h3 {
+  margin: 0;
+  padding: 0;
+}
+
+.post-grid-block {
+  width: 15em;
+  height: 10em;
+  padding: 0.5em;
+  margin: 1em;
+  color: black;
+  text-decoration: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 1px solid #0005;
+  border-right: 2px solid #0005;
+  border-bottom: 2px solid #0005;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  transition: border 200ms ease-in-out;
+}
+
+.post-grid-block:hover {
+  border: 3px solid var(--nav-text-hover);
+}
+
+
+@media screen and (max-width: 600px) {
+  .post-grid {
+    justify-content: center;
+  }
 }
