Finalize first real blog post

--- a/design/templates/footer.html
+++ b/design/templates/footer.html
@@ -1,6 +1,7 @@
 <footer>
     <div class="foot-box">
     Hugo Peters <br>
-    hpeters1024@gmail.com
+    hpeters1024@gmail.com <br>
+    Running on a raspberry pi 3+
     </div>
 </footer>
