--- a/design/templates/footer.html
+++ b/design/templates/footer.html
@@ -2,6 +2,6 @@
     <div class="foot-box">
     Hugo Peters <br>
     hpeters1024@gmail.com <br>
-    Running on a raspberry pi 3+
+    Running on a raspberry pi 3b+
     </div>
 </footer>
