--- a/design/templates/base.html
+++ b/design/templates/base.html
@@ -11,6 +11,7 @@
   {% endif %}
   {% block header %}
   {% endblock %}
+  <link rel="icon" href="{% block favicon %}{% endblock %}">
   <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
