--- a/design/templates/base.html
+++ b/design/templates/base.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <link rel="stylesheet" type="text/css" href="/public/pygments.css">
   <link rel="stylesheet" type="text/css" href="/public/style.css">
-  {% if DEBUG %}
+  {% if DEBUG and False %}
     <script type="text/javascript" src="http://livejs.com/live.js"></script>
   {% endif %}
   {% block header %}
