--- a/design/templates/macros.html
+++ b/design/templates/macros.html
@@ -8,10 +8,11 @@
   {{ refPostString(id) | safe }}
 {%- endmacro %}
 
-{% macro commentSection(issue_id) -%}
-
 {% set gitalk_client_id = 'a1da1553c3ddbf769a52' %}
 {% set gitalk_client_secret = '1ad095f6d5d87b7818859fa8184bd422fca65253' %}
+
+{% macro commentSection(issue_id) -%}
+
 
 <div id="gitalk-container"></div>
 <script>
@@ -22,7 +23,7 @@ const gitalk = new Gitalk({
   owner: 'HugoPeters1024',
   admin: ['HugoPeters1024'],
   id: "{{ issue_id }}",      // Ensure uniqueness and length less than 50
-  number: 3,
+  number: "{{ issue_id }}",
   distractionFreeMode: false  // Facebook-like distraction free mode
 })
 
