--- a/design/public/style.css
+++ b/design/public/style.css
@@ -11,7 +11,7 @@ body {
     min-height: 100%;
     margin: 0;
     padding: 0;
-    font-family: Arial, Helvetica, sans-serif; 
+    font-family: Helvetica, arial, sans-serif;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
