--- a/design/public/style.css
+++ b/design/public/style.css
@@ -2,7 +2,7 @@
     --nav-background: #303952;
     --nav-text: #bbb;
     --nav-text-hover: #e15f41;
-    --nav-font: "Courier New", Courier, monospace;
+    --nav-font: "Ubuntu", "Courier New", Courier, monospace;
     --white: #eee;
     --black: #333;
 }
