--- a/design/public/style.css
+++ b/design/public/style.css
@@ -331,6 +331,15 @@ footer .foot-box {
 
 /* Posts */
 
+.content h2 {
+    margin-top: 3em;
+}
+
+.content h1 {
+    margin-bottom: 2em;
+    font-size: 32pt; 
+}
+
 .modified-at {
   color: rgba(0, 0, 0, 0.5);
   text-align: right;
