--- a/design/templates/post.html
+++ b/design/templates/post.html
@@ -1,6 +1,7 @@
 {% extends "templates/base.html" %}
 
 {% block title %}{{post.title}}{% endblock %}
+{% block favicon %}/posts/{{post.number}}/{{post.favicon}}{% endblock %}
 
 {% block content %}
   <div class="code-languages">
