--- a/design/public/style.css
+++ b/design/public/style.css
@@ -437,3 +437,10 @@ table.rwd-table tbody tr:nth-child(even) {
 table.rwd-table tbody tr:nth-child(odd) {
   background-color: var(--white);
 }
+
+img.img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 100%;
+}
