code font and typo

--- a/design/templates/base.html
+++ b/design/templates/base.html
@@ -10,6 +10,7 @@
   <script src="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.min.js"></script>
   <link rel="stylesheet" type="text/css" href="/public/pygments.css">
   <link rel="stylesheet" type="text/css" href="/public/style.css">
+  <link type="text/css" href='https://fonts.googleapis.com/css?family=JetBrains Mono' rel='stylesheet'>
 
   {% if DEBUG %}
     <script type="text/javascript" src="http://livejs.com/live.js"></script>
@@ -35,7 +36,7 @@
     {% endblock %}
     </div>
   </div>
-  
+
   {% block footer %}
     {% include 'templates/footer.html' %}
   {% endblock %}
