--- a/design/public/style.css
+++ b/design/public/style.css
@@ -52,7 +52,7 @@ nav ul {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-} 
+}
 
 nav li {
     padding: 0.5em;
@@ -123,7 +123,7 @@ nav a:hover {
     content: '';
     position: absolute;
 }
- 
+
 .nav-toggle-label span::before {
     bottom: 7px;
 }
@@ -252,6 +252,11 @@ footer .foot-box {
   overflow: auto;
 }
 
+pre {
+  font-family: 'JetBrains Mono';
+  font-size: 15px;
+}
+
 /* Post rendering */
 
 .latest-posts {
@@ -343,7 +348,7 @@ footer .foot-box {
 
 .content h1 {
     margin-bottom: 2em;
-    font-size: 32pt; 
+    font-size: 32pt;
 }
 
 .modified-at {
