--- a/design/public/style.css
+++ b/design/public/style.css
@@ -1,451 +1,393 @@
 :root {
-    --nav-background: #303952;
-    --nav-text: #bbb;
-    --nav-text-hover: #e15f41;
-    --nav-font: "Courier New", Courier, monospace;
-    --white: #eee;
-    --black: #333;
+    --bg: #fff;
+    --fg: #222;
+    --fg-muted: #666;
+    --accent: #b04030;
+    --border: #ccc;
+    --code-bg: #1e1e1e;
+    --code-fg: #d4d4d4;
+    --table-even: #f0f0f0;
+    --mono: 'JetBrains Mono', 'Courier New', Courier, monospace;
+    --body: Ubuntu, sans-serif;
+    --max-width: 720px;
+}
+
+* {
+    box-sizing: border-box;
+}
+
+html {
+    height: 100%;
+    overflow-x: hidden;
 }
 
 body {
     min-height: 100%;
     margin: 0;
     padding: 0;
-    font-family: Ubuntu, sans-serif;
+    font-family: var(--body);
+    font-size: 15px;
+    line-height: 1.6;
+    color: var(--fg);
+    background-color: var(--bg);
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    background-color: var(--white);
-}
-
-html {
-  height: 100%;
 }
 
 /* Navigation */
 
 header {
-    background-color: var(--nav-background);
-    text-align: center;
-    z-index: 999;
+    border-bottom: 1px solid var(--border);
+    padding: 1em 2em;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: var(--max-width);
     width: 100%;
+    margin: 0 auto;
+}
+
+header .logo {
+    font-size: 1.4em;
     margin: 0;
-    padding: 0;
-    color: var(--nav-text);
+    font-weight: bold;
+}
+
+header .logo a {
+    color: var(--fg);
+    text-decoration: none;
+}
+
+header .logo a:hover {
+    color: var(--accent);
 }
 
 nav {
-    font-family: var(--nav-font);
-    position: absolute;
-    text-align: left;
-    background-color: var(--nav-background);
-    width: 100%;
-    transform: scale(1, 0);
-    transform-origin: top;
-    transition: transform 300ms ease-in-out;
-}
-
-nav ul {
-    margin: 0;
-    list-style: none;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-nav li {
-    padding: 0.5em;
+    gap: 1.5em;
 }
 
 nav a {
-    height: 100%;
-    color: var(--nav-text);
+    color: var(--fg-muted);
     text-decoration: none;
-    font-size: 1.2rem;
-    text-transform: uppercase;
-    opacity: 0;
-    transition: opacity 150ms ease-in-out;
-    transition: color 150ms ease-in-out;
+    font-size: 0.9em;
 }
 
 nav a:hover {
-    color: var(--nav-text-hover);
+    color: var(--accent);
 }
 
-.nav-toggle {
-    display: none;
-}
-
-.nav-toggle:checked ~ nav {
-    transform: scale(1, 1);
-}
-
-.nav-toggle:checked ~ nav a {
-    opacity: 1;
-    transition: opacity 250ms ease-in-out 200ms;
-}
-
+/* Hide hamburger on all sizes - simple nav is always visible */
+.nav-toggle,
 .nav-toggle-label {
-    position: absolute;
-    top: 1em;
-    margin-left: 1em;
-    padding: 0.5em;
-    height: 2em;
-    display: flex;
-    align-items: center;
-}
-
-.nav-toggle-label:hover {
-    cursor: pointer;
-}
-
-.nav-toggle-label:hover span,
-.nav-toggle-label:hover span::before,
-.nav-toggle-label:hover span::after {
-    background-color: var(--nav-text-hover);
-}
-
-.nav-toggle-label span,
-.nav-toggle-label span::before,
-.nav-toggle-label span::after {
-    display: block;
-    background-color: var(--nav-text);
-    height: 2px;
-    width: 2em;
-    border-radius: 2px;
-    position: relative;
-    transition: background-color 120ms ease-in-out;
-}
-
-.nav-toggle-label span::before,
-.nav-toggle-label span::after {
-    content: '';
-    position: absolute;
-}
-
-.nav-toggle-label span::before {
-    bottom: 7px;
-}
-
-.nav-toggle-label span::after {
-    top: 7px;
-}
-
-
-@media screen and (min-width: 800px) {
-    .nav-toggle-label {
-        display: none;
-    }
-
-    header {
-        display: grid;
-        grid-template-columns: 1fr auto minmax(600px, 3fr) 1fr;
-    }
-
-    .logo {
-        grid-column: 2 / span 1;
-    }
-
-    nav {
-        all: unset;
-        grid-column: 3 / 4;
-        display: flex;
-        justify-content: flex-end;
-        align-items: center;
-        transition: color 100ms ease-in-out;
-    }
-
-    nav ul {
-        display: flex;
-        flex-direction: row;
-        height: 100%;
-    }
-
-    nav li {
-        transition: background-color 200ms ease-in-out;
-        height: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-
-    nav a {
-        padding-left: 1.5em;
-        padding-right: 1.5em;
-        opacity: 1;
-        height: 100%;
-        width: 100%;
-        display: flex;
-        align-items: center;
-        transition: color 120ms ease-in-out;;
-    }
-
-    nav a:hover {
-        color: var(--nav-text-hover);
-    }
-
+    display: none;
 }
 
 /* Footer */
 
 footer {
-    overflow: hidden;
-    margin: 0;
-    padding: 0;
+    border-top: 1px solid var(--border);
+    padding: 1.5em 2em;
+    max-width: var(--max-width);
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    color: var(--fg-muted);
     font-size: 0.8em;
-    background-color: var(--nav-background);
-    color: white;
-    width: 100%;
-    height: 5em;
-    display: grid;
-    grid-template-columns: 1fr 3fr 1fr;
-}
-
-footer .foot-box {
-    height: 100%;
-    width: 100%;
-    display: flex;
-    justify-content: flex-end;
-    text-align: right;
-    padding-top: 0.8em;
-    color: var(--nav-text);
-    grid-column: 2 / 3;
 }
 
 /* Content */
+
 .content {
     width: 100%;
-    height: 100%;
-    display: grid;
-    grid-template-columns: minmax(0, 2fr) minmax(400px, 8fr) minmax(0, 4fr);
-    /* Instead of justify-self: start */
+    max-width: var(--max-width);
+    margin: 0 auto;
+    padding: 0 2em;
     margin-bottom: auto;
+    flex: 1;
+    overflow: visible;
 }
 
-.content-page
-{
-    padding: 1em;
-    grid-column: 2 / 3;
-    color: black;
-}
-
-@media screen and (max-width: 1200px) {
-  .content {
-    grid-template-columns: minmax(0, 2fr) minmax(400px, 7fr) minmax(0, 3fr);
-  }
-}
-
-@media screen and (max-width: 800px) {
-  .content {
-    grid-template-columns: minmax(0, 2fr) minmax(400px, 7fr) minmax(0, 2fr);
-  }
+.content-page {
+    color: var(--fg);
+    overflow: visible;
 }
 
 /* Code */
 
 .highlight {
-  padding: 0.6em;
-  background-color: #333;
-  color: var(--white);
-  overflow: auto;
+    padding: 1em;
+    background-color: var(--code-bg);
+    color: var(--code-fg);
+    overflow-x: auto;
+    font-size: 13px;
+    line-height: 1.5;
 }
 
 pre {
-  font-family: 'JetBrains Mono';
-  font-size: 15px;
+    font-family: var(--mono);
+    font-size: 13px;
+    margin: 0;
 }
 
-/* Post rendering */
+/* Post listing on homepage */
 
 .latest-posts {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
+    display: flex;
+    flex-direction: column;
 }
 
 .latest-posts a {
-  text-decoration: none;
-  color: black;
-  padding: 10px;
-  padding-left: 0;
-  width: 100%;
-  padding: 1em;
-  padding-left: 0;
-  transition: color 120ms ease-in-out;
-  display: flex;
-  justify-content: flex-start;
+    text-decoration: none;
+    color: var(--fg);
+    padding: 0.5em 0;
+    display: flex;
+    align-items: center;
+    gap: 0.75em;
+    border-bottom: 1px solid var(--table-even);
+}
+
+.latest-posts a:last-child {
+    border-bottom: none;
 }
 
 .latest-posts a:hover {
-  color: var(--nav-text-hover);
+    color: var(--accent);
 }
+
+.post-block img {
+    display: block;
+}
+
+/* Post grid (all posts page) */
 
 .post-grid {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-}
-
-.post-grid h3 {
-  margin: 0;
-  padding: 0;
-}
-
-.post-grid p {
-  margin: 0;
-  padding: 0;
-}
-
-.post-grid p.abstract {
-  padding: 0.5em;
-  font-style: italic;
-  font-size: 0.9em;
+    display: flex;
+    flex-direction: column;
 }
 
 .post-grid-block {
-  width: 18em;
-  height: 12em;
-  padding: 0.5em;
-  margin: 1em;
-  color: black;
-  text-decoration: none;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  border: 1px solid #0005;
-  border-right: 2px solid #0005;
-  border-bottom: 2px solid #0005;
-  box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  transition: border 200ms ease-in-out;
+    text-decoration: none;
+    color: var(--fg);
+    padding: 1em 0;
+    border-bottom: 1px solid var(--border);
+    display: block;
 }
 
 .post-grid-block:hover {
-  border: 3px solid var(--nav-text-hover);
+    color: var(--accent);
+}
+
+.post-grid-block:hover h3 {
+    color: var(--accent);
+}
+
+.post-grid h3 {
+    margin: 0 0 0.25em 0;
+    font-size: 1em;
+}
+
+.post-grid p {
+    margin: 0;
+    font-size: 0.85em;
+    color: var(--fg-muted);
+}
+
+.post-grid p.abstract {
+    font-style: italic;
+    margin-top: 0.25em;
 }
 
 .post-grid-title-block {
-    display: grid;
-    grid-tempate-columns: 1fr 32px;
-    column-gap: 1em;
-}
-
-
-@media screen and (max-width: 600px) {
-  .post-grid {
-    justify-content: center;
-  }
+    display: flex;
+    align-items: center;
+    gap: 0.5em;
 }
 
 /* Posts */
 
-.content h2 {
-    margin-top: 3em;
+.content h1 {
+    font-size: 1.5em;
+    margin-bottom: 1em;
+    line-height: 1.3;
 }
 
-.content h1 {
-    margin-bottom: 2em;
-    font-size: 32pt;
+.content h2 {
+    font-size: 1.15em;
+    margin-top: 2.5em;
+    border-bottom: 1px solid var(--border);
+    padding-bottom: 0.3em;
 }
 
 .modified-at {
-  color: rgba(0, 0, 0, 0.5);
-  text-align: right;
-  width: 100%;
+    color: var(--fg-muted);
+    text-align: right;
+    width: 100%;
+    margin-top: 3em;
 }
 
 .code-languages {
-  display: flex;
-  flex-wrap: wrap;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.3em;
+    margin-bottom: 0.5em;
 }
 
 .code-language {
-  padding: 0.4em;
-  margin: 0.2em;
-  margin-top: 0;
-  font-size: 0.8em;
-  background-color: #303444;
-  color: var(--white);
-  border-radius: 5px;
+    padding: 0.15em 0.5em;
+    font-size: 0.75em;
+    background-color: var(--code-bg);
+    color: var(--code-fg);
+    border-radius: 2px;
 }
 
+/* Side-by-side code + table panels */
+
 .window {
-  display: flex;
+    display: flex;
+    gap: 1em;
+    margin: 1.5em -30%;
+    padding: 0 2em;
 }
 
 .window .panel {
-  width: 50%;
-  padding: 0.6em;
+    width: 50%;
+    min-width: 0;
 }
 
-.citings {
-  font-size: 0.86em;
-}
-
-a.source {
-  color: inherit;
-  float: right;
-  margin-right: 0.5em;
-  font-size: 0.9em;
+.window .panel .highlight {
+    font-size: 12px;
 }
 
 @media screen and (max-width: 1200px) {
-  .window {
-    display: block;
-  }
-  .window .panel {
-    width: 100%;
-  }
+    .window {
+        margin-left: -10%;
+        margin-right: -10%;
+    }
+}
+
+@media screen and (max-width: 900px) {
+    .window {
+        margin-left: 0;
+        margin-right: 0;
+        padding: 0;
+        flex-direction: column;
+    }
+    .window .panel {
+        width: 100%;
+    }
+    .window .panel .highlight {
+        font-size: 13px;
+    }
+}
+
+/* Citations / footnotes */
+
+.citings {
+    font-size: 0.85em;
+    color: var(--fg-muted);
+}
+
+a.source {
+    color: var(--fg-muted);
+    float: right;
+    margin-right: 0.5em;
+    font-size: 0.85em;
+}
+
+a.source:hover {
+    color: var(--accent);
+}
+
+/* Links */
+
+a {
+    color: var(--accent);
+}
+
+a:visited {
+    color: var(--accent);
 }
 
 /* Home page */
 
 .profile-picture {
-  float: right;
-  width: 25%;
-  max-width: 200px;
-  margin-left: 1em;
+    float: right;
+    width: 25%;
+    max-width: 150px;
+    margin-left: 1.5em;
+    margin-bottom: 1em;
 }
 
 .about {
-  display: inline-block;
+    display: inline-block;
 }
 
-/* Scientifc Table */
+/* Tables */
+
 table.rwd-table {
-  font-family: Verdana;
-  border-collapse: collapse;
-  width: 100%;
+    font-family: var(--mono);
+    border-collapse: collapse;
+    width: 100%;
+    font-size: 0.85em;
 }
 
 table.rwd-table thead tr th {
-  background-color: var(--black);
-  color: var(--white);
-  text-align: left;
+    background-color: var(--code-bg);
+    color: var(--code-fg);
+    text-align: left;
+    padding: 0.5em;
+    font-weight: normal;
 }
 
 table.rwd-table td {
-  padding: 0.5em;
+    padding: 0.4em 0.5em;
 }
 
 table.rwd-table th {
-  padding: 0.5em;
+    padding: 0.4em 0.5em;
 }
 
 table.rwd-table tbody tr:nth-child(even) {
-  background-color: #bbb;
+    background-color: var(--table-even);
 }
 
 table.rwd-table tbody tr:nth-child(odd) {
-  background-color: var(--white);
+    background-color: var(--bg);
 }
 
+/* Images */
+
 img.img {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 100%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 100%;
+}
+
+/* Horizontal rule */
+
+hr {
+    border: none;
+    border-top: 1px solid var(--border);
+    margin: 2em 0;
+}
+
+/* Blockquote */
+
+blockquote {
+    border-left: 3px solid var(--border);
+    margin: 1em 0;
+    padding: 0.5em 1em;
+    color: var(--fg-muted);
+}
+
+/* Lists */
+
+ul, ol {
+    padding-left: 1.5em;
+}
+
+li {
+    margin-bottom: 0.25em;
 }
