--- a/design/templates/base.html
+++ b/design/templates/base.html
@@ -3,14 +3,14 @@
 <head>
   {% import 'templates/macros.html' as macros %}
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.css">
   <script src="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.min.js"></script>
   <link rel="stylesheet" type="text/css" href="/public/pygments.css">
   <link rel="stylesheet" type="text/css" href="/public/style.css">
-  <link type="text/css" href='https://fonts.googleapis.com/css?family=JetBrains Mono' rel='stylesheet'>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu">
+  <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;700&display=swap" rel="stylesheet">
 
   {% if DEBUG %}
     <script type="text/javascript" src="http://livejs.com/live.js"></script>
@@ -22,13 +22,12 @@
 </head>
 <body>
   {% if DEBUG %}
-  <h1 color=red>DEBUG</h1>
+  <p style="color:red;text-align:center">-- DEBUG --</p>
   {% endif %}
 
   {% block nav %}
     {% include 'templates/nav.html' %}
   {% endblock %}
-
 
   <div class="content">
     <div class="content-page">
