--- a/design/templates/footer.html
+++ b/design/templates/footer.html
@@ -1,7 +1,3 @@
 <footer>
-    <div class="foot-box">
-    Hugo Peters <br>
-    hpeters1024@gmail.com <br>
-    Running on a raspberry pi 3b+
-    </div>
+    Hugo Peters &middot; hpeters1024@gmail.com &middot; running on a raspberry pi 3b+
 </footer>
