--- a/design/templates/nav.html
+++ b/design/templates/nav.html
@@ -1,11 +1,9 @@
 <header>
-    <h1 class="logo">Hugo's Blog</h1>
+    <div class="logo"><a href="/">Hugo's Blog</a></div>
     <input type="checkbox" id="nav-toggle" class="nav-toggle">
     <nav>
-        <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/posts">Posts</a></li>
-        </ul>
+        <a href="/">Home</a>
+        <a href="/posts">Posts</a>
     </nav>
     <label for="nav-toggle" class="nav-toggle-label">
         <span></span>
