--- a/design/templates/base.html
+++ b/design/templates/base.html
@@ -17,6 +17,7 @@
   {% endif %}
   {% block header %}
   {% endblock %}
+  <link rel="alternate" type="application/rss+xml" title="Hugo's Blog" href="/feed.xml">
   <link rel="icon" href="{% block favicon %}{% endblock %}">
   <title>{% block title %}{% endblock %}</title>
 </head>
