--- a/design/templates/nav.html
+++ b/design/templates/nav.html
@@ -4,6 +4,7 @@
     <nav>
         <a href="/">Home</a>
         <a href="/posts">Posts</a>
+        <a href="/feed.xml">RSS</a>
     </nav>
     <label for="nav-toggle" class="nav-toggle-label">
         <span></span>
