--- a/design/public/style.css
+++ b/design/public/style.css
@@ -130,6 +130,15 @@ pre {
     margin: 0;
 }
 
+code {
+    font-family: var(--mono);
+    font-size: 0.88em;
+    background-color: var(--table-even);
+    color: var(--fg);
+    padding: 0.15em 0.4em;
+    border-radius: 3px;
+}
+
 /* Post listing on homepage */
 
 .latest-posts {
